error page added + fix in select option mobile

--- a/src/sass/theme/base/_header.scss
+++ b/src/sass/theme/base/_header.scss
@@ -55,7 +55,7 @@
 		margin-top: 0;
 		padding: 0;
 		text-align: right;
-		width: 40%;
+		width: 50%;
 
 		img {
 			padding: 0 20px 0 20px;
@@ -74,11 +74,11 @@
 		width: 120px;
 	}
 
-	@media (min-width: $b-large) {
+	@media (min-width: $b-large) and (-webkit-min-device-pixel-ratio: 2) {
 		display: none;
 	}
 
-	@media (max-width: $b-large) {
+	@media (max-width: $b-large) and (-webkit-min-device-pixel-ratio: 2) {
 		display: block;
 	}
 
@@ -86,13 +86,13 @@
 
 
 .desktop-nav {
-	@media (min-width: $b-large) {
+	@media (min-width: $b-large) and (-webkit-min-device-pixel-ratio: 2) {
 		@include container();
 		display: block;
 		margin-bottom: 6em;
 	}
 
-	@media (max-width: $b-large) {
+	@media (max-width: $b-large) and (-webkit-min-device-pixel-ratio: 2) {
 		display: none;
 	}
 
@@ -130,7 +130,7 @@
 
 .header {
 	@include container(1128px);
-		@media (min-width: $b-large) {
+		@media (min-width: $b-large) and (-webkit-min-device-pixel-ratio: 2) {
 			padding: 0 span(1 of 18) 0;
 			h1,
 			h3 {
@@ -139,7 +139,7 @@
 			}
 		}
 
-		@media (max-width: $b-large) {
+		@media (max-width: $b-large) and (-webkit-min-device-pixel-ratio: 2) {
 			position: relative;
 			margin-right: 0 gutter();
 			h1,
@@ -154,11 +154,11 @@
 	float: none;
 
 	hgroup {
-		@media (min-width: $b-large) {
+		@media (min-width: $b-large) and (-webkit-min-device-pixel-ratio: 2) {
 			@include span(10 of 18);
 		}
 
-		@media (max-width: $b-large) {
+		@media (max-width: $b-large) and (-webkit-min-device-pixel-ratio: 2) {
 			padding-top: 12em;
 			h1 {
 				padding-bottom: 1em;
@@ -172,14 +172,14 @@
 
 .form-container,
 .mobile-form-container {
-	@media (min-width: $b-large) {
+	@media (min-width: $b-large) and (-webkit-min-device-pixel-ratio: 2) {
 		@include span(6 at 13 of 18);
 		background-color: rgba(34,34,34,.6);
 		display: block;
 		padding: 1em 2em;
 	}
 
-	@media (max-width: $b-large) {
+	@media (max-width: $b-large) and (-webkit-min-device-pixel-ratio: 2) {
 		position: relative;
 		margin: 0 auto;
 		display: none;
@@ -208,19 +208,26 @@
 
 	select {
 		background: white url("../img/bg_select.png") right 10px center;
-		background-size: 7%;
+		background-size: 20px;
 		background-repeat: no-repeat;
 		color: #939393;
 		padding: 10px;
-		margin: 10px 0;
-		font-size: 16px;
-		width: 100%;
+		margin: 7px 0;
+		font-size: 1em;
+		box-sizing:content-box;
+		-ms-box-sizing:content-box;
+		-moz-box-sizing:content-box;
+		-webkit-box-sizing:content-box; 
+		width: 95%;
 			-webkit-appearance: none;
 	}
 
 	.form-privacy,
 	.form-info {
 		float: left;
+		text-align: left;
+		width: 100%;
+		
 		input {
 			float: left;
 			width: 30px;
@@ -263,7 +270,7 @@
 
 
 .mobile-form-container { 
-	@media (max-width: $b-large) {
+	@media (max-width: $b-large) and (-webkit-min-device-pixel-ratio: 2) {
 		display: none;
 		margin-top: 8em;
 		padding: 2em 0;
@@ -276,6 +283,13 @@
 	a {
 		text-decoration: none;
 		color: #7ec048;
+	}
+
+	@media (max-width: $b-large) and (-webkit-min-device-pixel-ratio: 2) {
+		float: none;
+		text-align: center;
+		display: block;
+		width: 100%;
 	}
 }
 
